finished home, about, navbar and animals components

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre Animal Book App</h1>
+<hr />
+<p class="animated fadeIn">
+  Animal Book App es una aplicación web relacionada para dar a conocer
+  información de los animales mas sorprendentes.
+</p>
