--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="jumbotron jumbotron-fluid fadeIn fast">
+  <div class="container">
+    <h1 class="display-4">Animals Book</h1>
+    <p class="lead">
+      Bienvenido!. Esta es una aplicación web relacionada al mundo animal
+    </p>
+  </div>
+</div>
