--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -29,16 +29,21 @@
         <a class="nav-link" [routerLink]="['about']">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <div class="form-inline my-2 my-lg-0">
       <input
         class="form-control mr-sm-2"
         type="search"
-        placeholder="Search"
-        aria-label="Search"
+        placeholder="Buscar Animal"
+        (keyup.enter)="buscarAnimal(buscarTexto.value)"
+        #buscarTexto
       />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
+      <button
+        (click)="buscarAnimal(buscarTexto.value)"
+        class="btn btn-outline-success my-2 my-sm-0"
+        type="submit"
+      >
+        Buscar
       </button>
-    </form>
+    </div>
   </div>
 </nav>
