--- a/src/app/components/animal/animal.component.html
+++ b/src/app/components/animal/animal.component.html
@@ -1,1 +1,37 @@
-<p>animal works!</p>
+<h1 class="animated fadeIn">
+  {{ animal.nombre | uppercase }}
+  <small>({{ animal.aparicion | date: "y" }})</small>
+</h1>
+<hr />
+<div class="row animated fadeIn fast">
+  <div class="col-md-4">
+    <img [src]="animal.img" class="img-fluid" [alt]="animal.nombre" />
+    <br />
+    <br />
+    <a [routerLink]="['/animales']" class="btn btn-outline-danger btn-block">
+      Regresar
+    </a>
+  </div>
+
+  <div class="col-md-8">
+    <h3>{{ animal.nombre }}</h3>
+    <hr />
+    <p>
+      {{ animal.bio }}
+    </p>
+    <div>
+      <img
+        *ngIf="animal.habitat == 'Terrestre'"
+        src="assets/img/tierra.jpg"
+        alt="Terrestre"
+        class="img-logo"
+      />
+      <img
+        *ngIf="animal.habitat != 'Terrestre'"
+        src="assets/img/agua.png"
+        alt="Acuático"
+        class="img-logo"
+      />
+    </div>
+  </div>
+</div>
