finished project and finished buscador component

--- a/src/app/components/animales/animales.component.html
+++ b/src/app/components/animales/animales.component.html
@@ -2,9 +2,9 @@
 <hr />
 <div class="card-columns">
   <app-animal-tarjeta
-    [animal]="foo"
+    [animal]="animal"
     [index]="i"
-    *ngFor="let foo of animales; let i = index"
+    *ngFor="let animal of animales; let i = index"
   >
   </app-animal-tarjeta>
 </div>
