--- a/src/app/components/buscador/buscador.component.html
+++ b/src/app/components/buscador/buscador.component.html
@@ -1,1 +1,19 @@
-<p>buscador works!</p>
+<h1>
+  Buscando: <small>{{ termino }}</small>
+</h1>
+<hr />
+<div class="row animated fadeIn fast" *ngIf="animales.length == 0">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      No existen resultados con el término: {{ termino }}
+    </div>
+  </div>
+</div>
+<div class="card-columns">
+  <app-animal-tarjeta
+    [animal]="animal"
+    [index]="animal.idx"
+    *ngFor="let animal of animales"
+  >
+  </app-animal-tarjeta>
+</div>
